--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>о себе</h1>
 <h2>чтото обо мне</h2>
-<h2>это изменилось в клоне репозитория</h2>
+<h2>это изменилось в клоне репозитория master</h2>
 </body>
 </html>
